@@ -1,4 +1,7 @@
 2009-10-16	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/lib/pf/action.pm, pf/lib/pf/violation.pm: Slight logging changes to
+	better represent what is actually going on.
+
 	* pf/lib/pf/trigger.pm: trigger_add_scan now follows a contract: returns
 	1 if a violation was added by the trigger and 0 otherwise
 	a litle POD doc as a bonus
